Add get notes route
