# backend/src/main/kotlin/com/violet/features/notes/models/NoteResponse.kt
@@ -1,0 +1,9 @@
+package com.violet.features.notes.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class NoteResponse(
+    val title: String,
+    val body: String
+)
